Evaluador de Estrés agregado

--- a/content/home.html
+++ b/content/home.html
@@ -625,7 +625,7 @@
                         <a class="nav-link">|</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Diagnóstico</a>
+                        <a class="nav-link" href="../content/diagnostic/estres.html">Diagnóstico</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">|</a>
