--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@ LISTA DE ARTÍCULOS SOBRE LIBRERÍA Y FRAMEWORKS DE JAVASCRIPT
 2. https://www.npmjs.com/
 3. https://geekflare.com/best-javascript-ui-libraries/
 
+LOTTTIEFILES
+1. https://lottiefiles.com/free-animations/svg
+
+CHATGPT PARA LA LÓGICA DE PREGUNTAS Y RESPUESTAS
+1. https://chatgpt.com/
+
 -->
 
 <!DOCTYPE html>
@@ -36,6 +42,8 @@ LISTA DE ARTÍCULOS SOBRE LIBRERÍA Y FRAMEWORKS DE JAVASCRIPT
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <!--Estilos personalizados-->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
