--- a/content/diagnostic/estres.html
+++ b/content/diagnostic/estres.html
@@ -229,6 +229,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link">|</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../all-projects.html">Proyectos</a>
+                    </li>
                 </ul>
             </div>
         </nav>
