Agregar sección de anuncios con estilos personalizados y script de Google AdSense

--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@ CHATGPT PARA LA LÓGICA DE PREGUNTAS Y RESPUESTAS
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <!--Estilos personalizados-->
     <link rel="stylesheet" href="styles.css">
+
+    <style>
+        /* Anuncios */
+        /* Estilos para la sección de anuncios */
+        .ad-section {
+            margin: 40px 0;
+            padding: 20px;
+            border: 2px dashed #ccc;
+            background-color: #f9f9f9;
+        }
+
+        .ad-section img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
 
@@ -179,6 +195,21 @@ CHATGPT PARA LA LÓGICA DE PREGUNTAS Y RESPUESTAS
                 Evaluar <i class="fa fa-check"></i>
             </button>
         </form>
+    </div>
+
+    <div class="ad-section">
+        <!-- Anuncio de Google AdSense -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Nombre del bloque de anuncios -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="tu-código-de-cliente"
+             data-ad-slot="tu-código-de-slot"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
 
     <!-- Ícono de WhatsApp flotante -->
