Agregar anuncios de Google AdSense y actualizar enlace de contacto en el menú de navegación

--- a/content/all-projects.html
+++ b/content/all-projects.html
@@ -288,6 +288,19 @@
             </script>
         </div>
 
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8698951889098274"
+        crossorigin="anonymous"></script>
+       <!-- Café -->
+       <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-8698951889098274"
+           data-ad-slot="5151697470"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+       <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+       </script>
+
         <!-- Paginación -->
         <nav>
             <ul class="pagination justify-content-center">
@@ -497,10 +510,13 @@
             });
         });
 
+        
+
         // Paginación (ejemplo simple)
         // Aquí puedes implementar la lógica de paginación
 
         // Sistema de comentarios y notificaciones requeriría un backend
     </script>
+   
 </body>
 </html>
