--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ LOTTTIEFILES
 CHATGPT PARA LA LÓGICA DE PREGUNTAS Y RESPUESTAS
 1. https://chatgpt.com/
 
+ANUNCIOS DE GOOGLE ADSENSE
+1. https://www.google.com/adsense/start/
+2. https://www.google.com/adsense/new/u/1/pub-8698951889098274/myads/units
+
 -->
 
 <!DOCTYPE html>
