--- a/content/home.html
+++ b/content/home.html
@@ -631,7 +631,7 @@
                         <a class="nav-link">|</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="contact.html">Contacto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">|</a>
