--- a/content/contact.html
+++ b/content/contact.html
@@ -49,6 +49,8 @@
             background: #f7f9fc;
             border-top-left-radius: 50%;
             border-top-right-radius: 50%;
+            border: 4px solid #007bff;
+            box-shadow: 0 0 15px rgba(0,0,0,0.5);
         }
         .contact-header h1 {
             font-size: 3rem;
@@ -182,7 +184,7 @@
 
     <!-- Encabezado de contacto -->
     <header class="contact-header">
-        <h1>📞 Contacto 📱</h1>
+        <h1>📞 Contáctame 📱</h1>
         <p>¡Nos encantaría saber de ti!</p>
     </header>
 
