--- a/content/all-projects.html
+++ b/content/all-projects.html
@@ -176,7 +176,7 @@
                         <p class="card-text">Prueba psicométrica de autoevaluación para evaluar el estrés percibido en el trabajo a partir de análisis de datos automatizados y algoritmos basados en reglas.</p>
                         <div class="mt-auto">
                             <div class="d-flex justify-content-between align-items-center">
-                                <a href="ruta-al-proyecto1.html" class="btn btn-primary">Ver Proyecto</a>
+                                <a href="../content/diagnostic/estres.html" class="btn btn-primary">Ver Proyecto</a>
                                 <!-- Símbolo de favoritos -->
                                 <button class="btn btn-outline-danger favorite-btn">
                                     <i class="far fa-heart"></i>
@@ -211,7 +211,7 @@
                         <p class="card-text">Herramienta de autoevaluación para evaluar la depresión en adultos a partir de la Escala de Depresión Zung (SDS) y analisis automatizado de datos.</p>
                         <div class="mt-auto">
                             <div class="d-flex justify-content-between align-items-center">
-                                <a href="ruta-al-proyecto2.html" class="btn btn-primary">Ver Proyecto</a>
+                                <a href="../index.html" class="btn btn-primary">Ver Proyecto</a>
                                 <!-- Símbolo de favoritos -->
                                 <button class="btn btn-outline-danger favorite-btn">
                                     <i class="far fa-heart"></i>
@@ -300,6 +300,39 @@
                     <p class="card-text">
                     <div class="d-flex justify-content-between align-items-center">
                         <a href="../content/diagnostic/Autism-AQ.html" class="btn btn-primary">Ver Proyecto</a>
+                        <!-- Símbolo de favoritos -->
+                        <button class="btn btn-outline-danger favorite-btn">
+                            <i class="far fa-heart"></i>
+                        </button>
+                    </div>
+                    <!-- Sistema de valoración -->
+                    <div class="mt-2">
+                        <span class="rating">
+                            <i class="far fa-star" data-rating="1"></i>
+                            <i class="far fa-star" data-rating="2"></i>
+                            <i class="far fa-star" data-rating="3"></i>
+                            <i class="far fa-star" data-rating="4"></i>
+                            <i class="far fa-star" data-rating="5"></i>
+                        </span>
+                    </div>
+                    <!-- Botones para compartir y reportar -->
+                    <div class="mt-2">
+                        <a href="#" class="text-secondary mr-3 share-btn"><i class="fas fa-share-alt"></i> Compartir</a>
+                        <a href="#" class="text-danger report-btn"><i class="fas fa-flag"></i> Reportar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-lg-4 project-item mb-4" data-category="categoria2">
+        <div class="card h-100">
+            <img src="../img/all-projects/portada-depresion.png" class="card-img-top" alt="Proyecto 2">
+            <div class="card-body d-flex flex-column">
+                <h5 class="card-title"> Escala Zung para evaluar la Depresión</h5>
+                <p class="card-text">Herramienta de autoevaluación para evaluar la depresión en adultos a partir de la Escala de Depresión Zung (SDS) y analisis automatizado de datos.</p>
+                <div class="mt-auto">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="../content/diagnostic/mental-disorder-prevention.html" class="btn btn-primary">Ver Proyecto</a>
                         <!-- Símbolo de favoritos -->
                         <button class="btn btn-outline-danger favorite-btn">
                             <i class="far fa-heart"></i>
