--- a/content/all-projects.html
+++ b/content/all-projects.html
@@ -67,8 +67,15 @@
         justify-content: center;
 
         /* Ubicar al final */
-        justify-content: flex-end;
+        justify-content: flex-end;    
     }
+    
+    .page-item a, .page-item a, .active a, .page-link a, .page-link li {
+        border: 1px solid #007bff !important;
+        border-radius: 2.5px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.39);
+    }
+
 
     .card-text {
         text-align: justify;
@@ -273,9 +280,7 @@
             </div>
         </div>
 
-
         <div class="ad-section">
-            
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8698951889098274"
             crossorigin="anonymous"></script>
             <!-- Café -->
@@ -289,8 +294,13 @@
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
+</main>
 
-        <div class="col-md-6 col-lg-4 project-item mb-4" data-category="categoria1">
+
+<main class="container my-5">
+    <div class="row" id="projectList">
+            <!-- Proyecto 4 -->
+        <div class="col-md-6 col-lg-4 project-item mb-4"        data-category="categoria1">
             <div class="card h-100">
                 <img src="../img/all-projects/portada-toc.png" class="card-img-top" alt="Proyecto 3">
                 <div class="card-body d-flex flex-column">
@@ -324,12 +334,14 @@
             </div>
         </div>
     </div>
+    <!-- Agrega más proyectos siguiendo el mismo formato -->
+    <!-- Proyecto 4 -->
     <div class="col-md-6 col-lg-4 project-item mb-4" data-category="categoria2">
         <div class="card h-100">
             <img src="../img/all-projects/portada-depresion.png" class="card-img-top" alt="Proyecto 2">
             <div class="card-body d-flex flex-column">
-                <h5 class="card-title"> Escala Zung para evaluar la Depresión</h5>
-                <p class="card-text">Herramienta de autoevaluación para evaluar la depresión en adultos a partir de la Escala de Depresión Zung (SDS) y analisis automatizado de datos.</p>
+                <h5 class="card-title">Escala Detección de Riesgo de Trastornos Mentales</h5>
+                <p class="card-text">Herramienta de autoevaluación para detectar el riesgo de trastornos mentales en adultos a partir de la Escala de Detección de Riesgo de Trastornos Mentales (EDRTM).</p>
                 <div class="mt-auto">
                     <div class="d-flex justify-content-between align-items-center">
                         <a href="../content/diagnostic/mental-disorder-prevention.html" class="btn btn-primary">Ver Proyecto</a>
@@ -358,6 +370,7 @@
         </div>
     </div>
 </main>
+
 
     <nav>
         <ul class="pagination justify-content-center">
